--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
 	"author": "",
 	"license": "GNU",
 	"dependencies": {
-		"express": "^4.15.3",
-		"gifencoder": "^1.0.6",
-		"gm": "^1.23.0",
-		"handlebars": "^4.0.10",
+		"express": "^4.16.2",
+		"gifencoder": "^1.1.0",
+		"gm": "^1.23.1",
 		"jimp": "^0.2.28",
-		"path": "^0.12.7",
-		"snekfetch": "^3.1.11"
+		"snekfetch": "^4.0.0-beta.0"
 	}
 }
