--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"gifencoder": "^1.1.0",
 		"gm": "^1.23.1",
 		"jimp": "^0.2.28",
+		"rethinkdbdash": "^2.3.31",
 		"snekfetch": "^4.0.0-beta.0"
 	}
 }
