--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "",
 	"license": "GNU",
 	"dependencies": {
+		"body-parser": "^1.18.2",
 		"express": "^4.16.2",
 		"gifencoder": "^1.1.0",
 		"gm": "^1.23.1",
