--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 		"body-parser": "^1.18.2",
 		"canvas": "^2.0.0-alpha.12",
 		"canvas-constructor": "github:kyranet/canvasConstructor",
+		"eslint": "^4.19.1",
+		"eslint-config-standard": "^11.0.0",
 		"express": "^4.16.2",
 		"fs-nextra": "^0.3.2",
 		"gifencoder": "^1.1.0",
 		"gm": "^1.23.1",
 		"jimp": "^0.2.28",
 		"rethinkdbdash": "^2.3.31",
-		"snekfetch": "^4.0.0-beta.0"
+		"snekfetch": "^4.0.0-beta.0",
+		"standard": "^11.0.1"
 	}
 }
