--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"fs-nextra": "^0.3.2",
 		"gifencoder": "^1.1.0",
 		"gm": "^1.23.1",
+		"handlebars": "^4.0.11",
 		"jimp": "^0.2.28",
 		"rethinkdbdash": "^2.3.31",
 		"snekfetch": "^4.0.0-beta.0",
